La til form i dinner.html og forandret oppstartsmåten i app.py til debug mode

--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>Velkommen til middagsopprettings -template</h1>
+    <form>
+        <label for="fimage">Bilde:</label><br>
+        <input type="text" id="fimage" name="fimage"><br>
+        <label for="fname">Navn:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
