Dato legges til ordentlig nå

--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -19,6 +19,8 @@
         {{ form.hidden_tag() }}
         {{ form.dinnerName.label }}<br>
         {{ form.dinnerName }}<br>
+        {{ form.mp_day.label }}<br>
+        {{ form.mp_day }}<br>
         {{ form.image.label }}<br>
         {{ form.image }}<br>
         {{ form.submit }}
