--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -25,5 +25,12 @@
         {{ form.image }}<br>
         {{ form.submit }}
     </form>
+    <div>
+        {% if form.image.errors %}
+            {% for error in form.image.errors %}
+                <span class="text-danger"> {{ error }} </span><br>
+            {% endfor %}
+        {% endif %}
+    </div>
 </body>
 </html>
