--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -17,17 +17,17 @@
     </div>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        {{ form.dinnerName.label }}<br>
-        {{ form.dinnerName }}<br>
-        {{ form.mp_day.label }}<br>
-        {{ form.mp_day }}<br>
-        {{ form.image.label }}<br>
-        {{ form.image }}<br>
+        {{ form.mp_name.label }}<br>
+        {{ form.mp_name }}<br>
+        {{ form.mp_date.label }}<br>
+        {{ form.mp_date }}<br>
+        {{ form.mp_image.label }}<br>
+        {{ form.mp_image }}<br>
         {{ form.submit }}
     </form>
     <div>
-        {% if form.image.errors %}
-            {% for error in form.image.errors %}
+        {% if form.mp_image.errors %}
+            {% for error in form.mp_image.errors %}
                 <span class="text-danger"> {{ error }} </span><br>
             {% endfor %}
         {% endif %}
