--- a/templates/deleteDinner.html
+++ b/templates/deleteDinner.html
@@ -5,7 +5,7 @@
     <title>Velkommen til middagsplanlegger</title>
 </head>
 <body>
-    <h1>Velkommen til middagsoppdaterings -template</h1>
+    <h1>Velkommen til middagsslettings -template</h1>
     <div>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -19,18 +19,7 @@
         {{ form.hidden_tag() }}
         {{ form.mp_id.label }}<br>
         {{ form.mp_id }}<br>
-        {{ form.mp_name.label }}<br>
-        {{ form.mp_name }}<br>
-        {{ form.mp_image.label }}<br>
-        {{ form.mp_image }}<br>
         {{ form.submit }}
     </form>
-    <div>
-        {% if form.mp_image.errors %}
-            {% for error in form.mp_image.errors %}
-                <span class="text-danger"> {{ error }} </span><br>
-            {% endfor %}
-        {% endif %}
-    </div>
 </body>
 </html>
