Forandret variabelnavn til riktige navnekonvensjoner

--- a/templates/deleteDinner.html
+++ b/templates/deleteDinner.html
@@ -17,8 +17,8 @@
     </div>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        {{ form.mp_id.label }}<br>
-        {{ form.mp_id }}<br>
+        {{ form.mp_dinner_id.label }}<br>
+        {{ form.mp_dinner_id }}<br>
         {{ form.submit }}
     </form>
 </body>
