laget side for sletting av meal

--- a/templates/deleteMeal.html
+++ b/templates/deleteMeal.html
@@ -5,7 +5,7 @@
     <title>Velkommen til middagsplanlegger</title>
 </head>
 <body>
-    <h1>Velkommen til middagsdato-oppdaterings -template</h1>
+    <h1>Velkommen til middagsdato-slettings -template</h1>
     <div>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -17,12 +17,8 @@
     </div>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        {{ form.mp_meal_id.label }}<br>
-        {{ form.mp_meal_id }}<br>
         {{ form.mp_meal_date.label }}<br>
         {{ form.mp_meal_date }}<br>
-        {{ form.mp_dinner_mp_dinner_id.label }}<br>
-        {{ form.mp_dinner_mp_dinner_id }}<br>
         {{ form.submit }}
     </form>
 </body>
