Fikset litt på diverse filer

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -6,10 +6,12 @@
 </head>
 <body>
     <h1>Opprett oppskrift for ... -template</h1>
-    <form method="post" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
         {{ form.recipeApproach.label }}<br>
         {{ form.recipeApproach }}<br>
+        {{ form.recipeVersion.label }}<br>
+        {{ form.recipeVersion }} <br>
         {{ form.submit }}
     </form>
 </body>
