--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,5 @@
 {% extends "Base.html" %}
-{% block title %} Velkommen til middagsplanlegger{% endblock %}
 
-{% block head %}
-  {{ super() }}
-  <style type="text/css">
-    .important { color: #336699; }
-  </style>
-{% endblock %}
 {% block content %}
-    <h1>Velkommen til middagsopprettings -template</h1>
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.dinnerName.label }}
-        {{ form.dinnerName }}
-        {{ form.submit }}
-    </form>
+    <h1>Velkommen til middagplanleggeren. </h1>
 {% endblock %}
