la til bruker -og gruppe id til oppretting og endring av dinner

--- a/templates/makeDinner.html
+++ b/templates/makeDinner.html
@@ -19,6 +19,10 @@
         {{ form.hidden_tag() }}
         {{ form.mp_dinner_title.label }}<br>
         {{ form.mp_dinner_title }}<br>
+        {{ form.mp_dinner_user_id.label }}<br>
+        {{ form.mp_dinner_user_id }}<br>
+        {{ form.mp_dinner_group_id.label }}<br>
+        {{ form.mp_dinner_group_id }}<br>
         {{ form.mp_dinner_image.label }}<br>
         {{ form.mp_dinner_image }}<br>
         {{ form.submit }}
