--- a/templates/updateDinner.html
+++ b/templates/updateDinner.html
@@ -21,6 +21,10 @@
         {{ form.mp_dinner_id }}<br>
         {{ form.mp_dinner_title.label }}<br>
         {{ form.mp_dinner_title }}<br>
+        {{ form.mp_dinner_user_id.label }}<br>
+        {{ form.mp_dinner_user_id }}<br>
+        {{ form.mp_dinner_group_id.label }}<br>
+        {{ form.mp_dinner_group_id }}<br>
         {{ form.mp_dinner_image.label }}<br>
         {{ form.mp_dinner_image }}<br>
         {{ form.submit }}
