Mulig å endre oppskrift og poste kommentar

--- a/templates/updateRecipe.html
+++ b/templates/updateRecipe.html
@@ -5,7 +5,7 @@
     <title>Oppskrift</title>
 </head>
 <body>
-    <h1>Opprett oppskrift for ... -template</h1>
+    <h1>Oppdater oppskrift for ... -template</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
         {{ form.recipeApproach.label }}<br>
