Every template inherits from base

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,15 @@
   <body>
 
   <!-- flashed messages -->
-
+      <div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
 
   <!-- navbar i base -->
 
