--- a/templates/createRecipe.html
+++ b/templates/createRecipe.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Oppskrift</title>
-</head>
-<body>
+{% extends "Base.html" %}
+
+{% block content %}
     <h1>Opprett oppskrift for ... -template</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
@@ -12,5 +8,6 @@
         {{ form.recipeApproach }}<br>
         {{ form.submit }}
     </form>
-</body>
-</html>
+{% endblock %}
+
+
