--- a/templates/postComment.html
+++ b/templates/postComment.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Comment</title>
-</head>
-<body>
-    <h1>Skriv kommentar til middag ... -template</h1>
+{% extends "Base.html" %}
+
+{% block content %}
+  <h1>Skriv kommentar til middag ... -template</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
         {{ form.commentText.label }}<br>
         {{ form.commentText }}<br>
         {{ form.submit }}
     </form>
-</body>
-</html>
+{% endblock %}
