--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
             Bruker
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="login">Logg inn</a></li>
-            <li><a class="dropdown-item" href="logout">Logg ut</a></li>
+            <li><a class="dropdown-item" href="/login">Logg inn</a></li>
+            <li><a class="dropdown-item" href="/logout">Logg ut</a></li>
           </ul>
         </li>
       </ul>
@@ -62,7 +62,7 @@
 
     <div id="content">{% block content %}
     
-                        {% endblock %}</div>
+    {% endblock %}</div>
     <div id="footer">
       {% block footer %}
 
