--- a/templates/dinnertamplates/deleteMeal.html
+++ b/templates/dinnertamplates/deleteMeal.html
@@ -1,12 +1,12 @@
-{% extends "Base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-      <h1>Velkommen til middagsslettings -template</h1>
+    <h1>Velkommen til middagsdato-slettings -template</h1>
 
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        {{ form.mp_dinner_id.label }}<br>
-        {{ form.mp_dinner_id }}<br>
+        {{ form.mp_meal_date.label }}<br>
+        {{ form.mp_meal_date }}<br>
         {{ form.submit }}
     </form>
 {% endblock %}
