--- a/templates/dinnertamplates/updateMeal.html
+++ b/templates/dinnertamplates/updateMeal.html
@@ -1,4 +1,4 @@
-{% extends "Base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
   <h1>Velkommen til middagsdato-oppdaterings -template</h1>
