--- a/templates/recipeTemplates/createRecipe.html
+++ b/templates/recipeTemplates/createRecipe.html
@@ -1,11 +1,13 @@
-{% extends "Base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-  <h1>Skriv kommentar til middag ... -template</h1>
+    <h1>Opprett oppskrift for ... -template</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
-        {{ form.commentText.label }}<br>
-        {{ form.commentText }}<br>
+        {{ form.recipeApproach.label }}<br>
+        {{ form.recipeApproach }}<br>
         {{ form.submit }}
     </form>
 {% endblock %}
+
+
