--- a/templates/commentTemplates/deleteComment.html
+++ b/templates/commentTemplates/deleteComment.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Velkommen til middagsplanlegger</title>
-</head>
-<body>
-    <h1>Velkommen til kommentar-slettings -template</h1>
-    <div>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-    </div>
+{% extends "base.html" %}
+
+{% block content %}
+   <h1>Velkommen til kommentar-slettings -template</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         {{ form.mp_comment_id.label }}<br>
         {{ form.mp_comment_id }}<br>
         {{ form.submit }}
     </form>
-</body>
-</html>
+{% endblock %}
+
