--- a/templates/commentTemplates/postComment.html
+++ b/templates/commentTemplates/postComment.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Skriv kommentar til middag ... -template</h1>
+  <h1>Skriv kommentar til middag ...</h1>
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}<br>
         {{ form.commentText.label }}<br>
