--- a/templates/base.html
+++ b/templates/base.html
@@ -1,72 +1,36 @@
-<!doctype html>
-
-<html lang="">
+<!DOCTYPE html>
+<html lang="no">
   <head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>{% block title %}{% endblock %}Middagsplanleggeren </title>
-    {% endblock %}
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Middagsplanleggeren</title>
+    <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
-
-  <!-- flashed messages -->
-      <div>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-    </div>
-
-  <!-- navbar i base -->
-
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Middagsplanleggeren</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Hjem</a>
+    <nav>
+      <div class="logo">
+        <p>{% block title %}{% endblock %}</p>
+      </div>
+      <ul class="nav-links">
+        <li><a href="{{ url_for('usersroute.profile') }}">Hjem</a></li>
+        <li>
+          <a href="{{ url_for('calendarroute.show_calendar') }}">Kalender</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/dinner">Middager</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/groups">Mine Grupper</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Bruker
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="/login">Logg inn</a></li>
-            <li><a class="dropdown-item" href="/logout">Logg ut</a></li>
-          </ul>
-        </li>
+        {% if current_user.is_authenticated %}
+        <li><a href="{{ url_for('grouproute.groups') }}">Mine Grupper</a></li>
+        {% endif %} {% if current_user.is_authenticated %}
+        <li><a href="{{ url_for('usersroute.profile') }}">Profile</a></li>
+        {% endif %} {% if not current_user.is_authenticated %}
+        <li><a href="{{ url_for('usersroute.register') }}">Registrering</a></li>
+        <li><a href="{{ url_for('usersroute.login') }}">Logg inn</a></li>
+        {% endif %} {% if current_user.is_authenticated %}
+        <li><a href="{{ url_for('usersroute.logout') }}">Logg ut</a></li>
+        {% endif %}
       </ul>
-    </div>
-  </div>
-</nav>
-
-
-  <!-- navbar over -->
-
-
-    <div id="content">{% block content %}
-    
-    {% endblock %}</div>
-    <div id="footer">
-      {% block footer %}
-
-      {% endblock %}
+    </nav>
+    <div class="hero-body">
+      <div>{% block content %} {% endblock %}</div>
     </div>
   </body>
 </html>
