--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@ block content %}
   <input type="text" name="first_name" placeholder="Fornavn" required />
   <input type="text" name="last_name" placeholder="Etternavn" required />
   <input type="password" name="password" placeholder="Passord" required />
+  <input type="password" name="confirm_password" placeholder="Bekreft passord" required />
   <input type="submit" name="" value="Register" />
 </form>
 {% endblock %}
