--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %} {% block title %} Hjem {% endblock %}
+{% block content %}
+      {% with messages = get_flashed_messages() %} {% if messages %}
+  <div
+    class="notification-is-danger-register"
+    id="notification-is-danger-register"
+  >
+    {{ messages[0] }}
+  </div>
+  {% endif %} {% endwith %}
+{% endblock %}
