Dag-knapp sender år, måned og dag -verdier til backend

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -30,7 +30,7 @@
       class="calendar__button"
       type="submit"
       name="add_dinner"
-      value="{{ day.day }}"
+      value="{{ [year, month, day.day] }}"
     >
       Legg til
     </button>
