--- a/templates/createGroup.html
+++ b/templates/createGroup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %} Grupper {% endblock %}
 {% block content %}
 <form class="register" method="POST">
-    <h1>Oprett gruppe</h1>
+    <h1>Opprett gruppe</h1>
     {% with messages = get_flashed_messages() %} {% if messages %}
     <div class="notification-is-danger-register" id="notification-is-danger-register">
         {{ messages[0] }}
