--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -1,3 +1,4 @@
+{#
 {% extends "base.html" %} {% block title %} Slett bruker {% endblock %} {% block
 content %}
     {% with messages = get_flashed_messages() %} {% if messages %}
@@ -10,4 +11,4 @@ content %}
 
   <input type="submit" value="Slett bruker" onclick="return confirm('Er du sikker på at du vil slette {{ first_name }} {{ last_name }}?')" />
 </form>
-{% endblock %}
+{% endblock %}#}
