--- a/templates/update_group.html
+++ b/templates/update_group.html
@@ -1,12 +1,13 @@
 {% extends "/base.html" %} {% block title %} Oppdater gruppe {% endblock %} {%
 block content %}
-<form class="update" action="{{ url_for('group.update_group_post', group_id=group.id) }}" method="POST">
+<form class="update" action="{{ url_for('grouproute.update_group_post', group_id=group.id) }}" method="POST">
   <h1>Oppdater gruppe</h1>
   {% with messages = get_flashed_messages() %} {% if messages %}
   <div
     class="notification-is-danger-register"
     id="notification-is-danger-register"
   >
+
     {{ messages[0] }}
   </div>
   {% endif %} {% endwith %}
