Begynt på å ordne slik at man kan gå fra å lage en dinner til å lage en recipe

--- a/templates/group.html
+++ b/templates/group.html
@@ -16,5 +16,12 @@
     href="{{ url_for('grouproute.delete_group', group_id=group.id) }}"
     ><button>Slett gruppe</button></a
   >
+    {% if(current_user_role.role_id != 4) %}
+<a
+    class="btn btn-info"
+    href="{{ url_for('calendarroute.create_dinner', group_id=group.id) }}"
+    ><button>Opprett middag</button></a
+  >
+    {% endif %}
 </div>
 {% endblock %}
