--- a/templates/createDinner.html
+++ b/templates/createDinner.html
@@ -2,15 +2,16 @@
 
 {% block content %}
   <h1>Make a dinner</h1>
-    <form method="POST" enctype="multipart/form-data">
-        Tittel:<br>
-        <input type="text" name="dinner_title" required><br>
-        Gruppe ID:<br>
-        <input type="number" name="group_id" required><br>
-        Bilde:<br>
-        <input type="file" name="dinner_image" accept="image/*"><br>
-        <br>
-        <br>
-        <input type="submit">
-    </form>
+
+    {% if(current_user_role.role_id != 4) %}
+        <form method="POST" enctype="multipart/form-data">
+            Tittel:<br>
+            <input type="text" name="dinner_title" required><br>
+            Bilde:<br>
+            <input type="file" name="dinner_image" accept="image/*"><br>
+            <br>
+            <br>
+            <input type="submit">
+        </form>
+    {% endif %}
 {% endblock %}
