--- a/templates/addrecipeIngredient.html
+++ b/templates/addrecipeIngredient.html
@@ -78,7 +78,7 @@ get_flashed_messages() %} {% if messages %} {% for message in messages %}
   </tr>
   <tr>
     <td>
-      <a href="{{ url_for('recipe_route.createRecipe', dinner_id=dinner_id)}}"
+      <a href="{{ url_for('group_route.groups')}}"
         ><button class="button button5">Videre</button></a
       >
     </td>
