--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -25,17 +25,21 @@
   {% for day in full_month %}
   <div class="calendar__day">
     {{ day.day }}<br />{{ days_of_week.get(day.strftime("%A")) }}<br />
-    <form class="calendar__form" action="{{ url_for('calendarroute.create_meal') }}" method="POST">
-    <button
-      class="calendar__button"
-      type="submit"
-      name="add_dinner"
-      value="{{ [year, month, day.day] }}"
-    >
-      Legg til
-    </button>
-    </button>
-  </form>
+      {% if meals[day.day - 1] %}
+          {{ meals[day.day - 1][1].title }}<br>
+          <img src={{ meals[day.day - 1][1].image }}><br>
+      {% else %}
+          <form class="calendar__form" action="{{ url_for('calendarroute.create_meal') }}" method="POST">
+            <button
+            class="calendar__button"
+            type="submit"
+            name="add_dinner"
+            value="{{ [year, month, day.day] }}"
+            >
+            Legg til
+            </button>
+            </form>
+      {% endif %}
   </div>
   {% endfor %}
 </div>
