Kan vise liste med middager, og trykke inn på en middag for å vise tittel, ingredienser og framgangsmåte. Kan ikke vise bilde enda.

--- a/templates/addrecipeIngredient.html
+++ b/templates/addrecipeIngredient.html
@@ -78,7 +78,7 @@ get_flashed_messages() %} {% if messages %} {% for message in messages %}
   </tr>
   <tr>
     <td>
-      <a href="{{ url_for('group_route.groups')}}"
+      <a href="{{ url_for('grouproute.groups')}}"
         ><button class="button button5">Videre</button></a
       >
     </td>
