Nå kan man legge til ingredienser til den middagen man har opprettet

--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -6,6 +6,9 @@
 <div>
 <h2>{{ recipe.approach }}</h2>
 </div>
+<div>
+    <img src="data:;base64,{{ image }}"/>
+</div>
 
 <div>
 {% for i in range(0,(len)) %}
