fått til visning av middagsbilde, jobbes fortsatt med å plassere dem i dager

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -2,6 +2,9 @@
 <h1 class="calendar__h1">Kalender</h1>
 <h2 class="calendar__h2">{{ month_name }} {{ year }}</h2>
 <h2 class="calendar__h2">
+<<div>
+    <img src="data:;base64,{{ image }}"/>
+</div>
   <form class="calendar__form" method="POST">
     <button
       class="calendar__button"
