--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -2,9 +2,9 @@
 <h1 class="calendar__h1">Kalender</h1>
 <h2 class="calendar__h2">{{ month_name }} {{ year }}</h2>
 <h2 class="calendar__h2">
-<<div>
+<!--<div>
     <img src="data:;base64,{{ image }}"/>
-</div>
+</div>-->
   <form class="calendar__form" method="POST">
     <button
       class="calendar__button"
@@ -30,7 +30,7 @@
     {{ day.day }}<br />{{ days_of_week.get(day.strftime("%A")) }}<br />
       {% if meals[day.day - 1] %}
           {{ meals[day.day - 1][1].title }}<br>
-          <img src={{ meals[day.day - 1][1].image }}><br>
+              <img class="calendar__day__image" src="data:;base64,{{ image }}"/>
       {% else %}
           <form class="calendar__form" action="{{ url_for('calendarroute.create_meal') }}" method="POST">
             <button
