--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -30,6 +30,16 @@
     {{ day.day }}<br />{{ days_of_week.get(day.strftime("%A")) }}<br />
       {% if dinners[day.day - 1] %}
           {{ dinners[day.day - 1][0] }}<br>
+                <form class="calendar__form" method="POST">
+                    <button
+                    class="calendar__button"
+                    type="submit"
+                    name="delete_meal"
+                    value="{{ meals[day.day - 1][0].id }}"
+                    >
+                    Slett
+                    </button>
+                </form>
               <img class="calendar__day__image" src="data:;base64,{{ dinners[day.day - 1][1] }}"/>
       {% else %}
           <form class="calendar__form" action="{{ url_for('calendarroute.create_meal') }}" method="POST">
