--- a/static/styles.css
+++ b/static/styles.css
@@ -564,10 +564,81 @@ dropdownIngredientlabel {
   border-color: #2ecc71;
 }
 
+/*--------------------- AUGUST SIN CSS ---------------------*/
+
+#ingredients_list {
+}
+
+.center_div {
+  margin: 30px;
+  outline: dashed 1px black;
+}
+
+.main_image {
+  max-height:1000px;
+  max-width:1200px;
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+}
+
+.main_title {
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+  text-align: center;
+
+}
+
+.left {
+  width: 20%;
+  padding: 15px;
+  margin-top: 7px;
+  text-align: center;
+  border: dashed 1px black;
+}
+
+.right {
+  float: right;
+  width: 80%;
+  padding: 15px;
+  margin-top: 7px;
+  text-align: center;
+  border: dashed 1px black;
+}
+
+#ingredients {
+  margin-top: 15px;
+  float: bottom;
+}
+
+#approach {
+  margin-top: 15px;
+
+}
+
+#portions {
+  margin-top: 15px;
+  float: top;
+
+}
+
+#buttons {
+  margin-top: 15px;
+  float: top;
+
+}
+
+.portion_button {
+  padding: 15px;
+  margin: 15px 15px 30px 15px;
+}
+
+
 div.dinner img {
   display: block;
-  max-width:500px;
-  max-height:500px;
+  max-height:1000px;
+  max-width:1000px;
   width: auto;
   height: auto;
 }
