--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -1,27 +1,46 @@
 {% extends "base.html" %} {% block content %}
-<div>
-<h1>{{ dinner.title }}</h1>
-{# vis bilde #}
-
-<div>
-<h2>{{ recipe.approach }}</h2>
-</div>
-<div class="dinner">
-    <img src="data:;base64,{{ image }}"/>
-</div>
-
-<div>
-{% for i in range(0,(len)) %}
-  <tr>
-      <td>{{ amounts[i].amount}}</td>
-      <td>{{ measurements[i].name }}</td>
-      <td>{{ ingredients[i].name }}</td>
-  </tr>
-    <br>
-  {% endfor %}
-</div>
 
 
+<div class="center_div">
+{# Vis bilde #}
+    <div class="main_image">
+    <img class="main_image" src="data:;base64,{{ image }}"/>
+    </div>
+        {# Vis tittel #}
+        <div class="main_title">
+        <h1>{{ dinner.title }}</h1>
+        </div>
+{# Vis fremgangsmåte #}
+        <div class="right" id="approach">
+        <h2>SLIK GJØR DU</h2>
+        <p>{{ recipe.approach }}</p>
+        </div>
+
+
+
+
+
+<div class="left" id="buttons">
+    <nav>Legg til i handlelisten</nav>
 </div>
+
+<div class="left" id="ingredients_list">
+        <h2>Ingredienser:</h2>
+    <h2>- <button class="portion_button">PORSJONER</button>+</h2>
+        {# Vis ingredienser #}
+        {% for i in range(0,(len)) %}
+            <li class="section_dinner" id="ingredients_list">
+            {{ amounts[i].amount}}
+            {{ measurements[i].name }}
+            {{ ingredients[i].name }}
+            </li>
+            <br>
+        {% endfor %}
+        </div>
+
+</div>
+
+
+
 
 {% endblock %}
