--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -1,19 +1,20 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+{% block content %}
 
 
-<div class="center_div">
-{# Vis bilde #}
+{#<div class="center_div">
+#}{# Vis bilde #}{#
     <div class="main_image">
     <img class="main_image" src="data:;base64,{{ image }}"/>
     </div>
-        {# Vis tittel #}
+        #}{# Vis tittel #}{#
         <div class="main_title">
         <h1>{{ dinner.title }}</h1>
         </div>
-{# Vis fremgangsmåte #}
+#}{# Vis fremgangsmåte #}{#
         <div class="right" id="approach">
         <h2>SLIK GJØR DU</h2>
-        <p>{{ recipe.approach }}</p>
+        <p style="white-space: pre-line">{{ recipe.approach }}</p>
         </div>
 
 
@@ -27,7 +28,7 @@
 <div class="left" id="ingredients_list">
         <h2>Ingredienser:</h2>
     <h2>- <button class="portion_button">PORSJONER</button>+</h2>
-        {# Vis ingredienser #}
+        #}{# Vis ingredienser #}{#
         {% for i in range(0,(len)) %}
             <li class="section_dinner" id="ingredients_list">
             {{ amounts[i].amount}}
@@ -38,7 +39,62 @@
         {% endfor %}
         </div>
 
-</div>
+</div>#}
+
+
+<main class="testimonial-grid">
+    <article class="testimonial">
+        <div class="flex outer">
+            <div class="inner">
+                {# 1 #}
+                <img class="inner" src="data:;base64,{{ image }}"/>
+            </div>
+        </div>
+    </article>
+
+    <article class="testimonial flow bg-neutral-100 quote text-neutral-100">
+        <div class="flex">
+            <div class="main_title">
+        <h1>{{ dinner.title }}</h1>
+        </div>
+        </div>
+    </article>
+
+    <article class="testimonial flow bg-neutral-100 quote text-neutral-100">
+        <div class="flex">
+            {# 3 #}
+            <div>
+        <h2>SLIK GJØR DU</h2><br>
+        <p class="approach" style="white-space: pre-line">{{ recipe.approach }}</p>
+        </div>
+        </div>
+    </article>
+
+    <article class="testimonial flow bg-neutral-100 quote text-neutral-100">
+        <div class="flex">
+        <div>
+            <h2>INGREDIENSER</h2><br>
+            {# 4 #}
+            {% for i in range(0,(len)) %}
+            <li class="section_dinner approach" id="ingredients_list">
+            {{ amounts[i].amount}}
+            {{ measurements[i].name }}
+            {{ ingredients[i].name }}
+            </li>
+        {% endfor %}
+
+        </div>
+        </div>
+    </article>
+
+    <article class="testimonial flow bg-neutral-100 quote text-neutral-100">
+        <div class="flex">
+            <h3>LEGG TIL HANDLELISTE</h3><br>
+            <h3>ANTALL PORSJONER</h3>
+            {# 5 #}
+        </div>
+    </article>
+</main>
 
 
 
