ved fjerning av middag fra en dag, nettsiden forblir på måneden middag ble fjernet fra

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -35,7 +35,7 @@
                     class="calendar__button"
                     type="submit"
                     name="delete_meal"
-                    value="{{ meals[day.day - 1][0].id }}"
+                    value="{{ [meals[day.day - 1][0].id, year, month] }}"
                     >
                     Slett
                     </button>
