--- a/static/styles.css
+++ b/static/styles.css
@@ -344,21 +344,27 @@ div.dinnerdiv1:hover {
 .calendar__h2 {
   text-align: center;
 }
+
+.calendar__day__container {
+}
+
 .calendar__day {
   text-align: center;
-  display: inline-block;
+  /*display: inline-grid;*/
+  display: inline-grid;
   background: cadetblue;
   width: 200px;
   height: 275px;
   border-style: solid;
+  margin: 2px;
 }
 .calendar__day__image {
-  width: 190px;
-  height: 190px;
+  width: 100%;
+  height: 100%;
 }
 
 .calendar__button[type="submit"] {
-  color: white;
+  color: black;
 }
 
 /*Magnus Sin*/
